$Id$

v0.51.3		22-Mar-2003

	general:
		Removed one setup entry for check for free diskspace, there
		were two different values for the same purpose. The removed
		one was not used.
		Moved doc directory from /opt/mbse/doc to /opt/mbse/share/doc.
		Added configure test for CPU optimization flags.

	mbtask:
		Signal handler for sigchld set to sig_dfl, test for Fedora.
		Removed setup for old diskspace parameter.

	mbsetup:
		Added html sitedocs creation. The advantage of html over the
		old plain doc is to easy see crossreferences using hyperlinks.
		The html files are created in /opt/mbse/share/doc/html.
		The ~/doc/xref.doc and ~/doc/stat.doc are not created anymore,
		there was nothing in it yet.
		Removed setup for the unused free diskspace parameter.

	mbfido:
		The area tags are now created in /opt/mbse/share/doc/tags.


v0.51.2		06-Mar-2004 - 22-Mar-2003

	upgrade:
		Before upgrade announce all new files!
		Compile all programs.
		Close the system with mbstat close.
		Install programs as root (as usual).
		Start mbsetup, this can take a while on a system with lots of
		files, during startup the files database will be converted.
		After the menu appears, enter global setup, exit and save.
		Now stop and restart mbtask.
		Open the system with mbstat open.

	general:
		Updated to a new files database structure that allows for
		expanding the records like most other databases to allow new
		features.
		Removed all references to costsharing for ticfiles which wasn't
		fully implemented.
		Added setup items for subprocess priority and sync filesystem.
		Added setup parameter for filefind keyword length.

	libcommon.a:
		Moved the initial delay in the execute functions to the child
		process, that may be the trick to work around the lost child
		messages.
		Added enoughspace function to check diskspace.

	mbcico:
		Updated file request function to new files database structure.
		Fixed a compile problem on FreeBSD 5.1
		To test 3 bugfixes: