@@ -78,21 +78,20 @@ else
     CFLAGS="-O3 -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes -D_REENTRANT"
 fi 
 
-dnl
-dnl Check if cpuflags program is installed, if so get CPU optimization flags
-dnl Currently this only works on NetBSD.
-dnl
+AC_ARG_ENABLE(optimize,   [  --enable-optimize       Enable CPU optimize], [ optimize=$enableval ], [ optimize=no ])
+if test "$optimize" = "yes"; then
 AC_MSG_CHECKING(for cpuflags)
-for cpuflagsbin in /usr/bin /usr/local/bin /usr/pkg/bin `pwd` NONE; do
+    for cpuflagsbin in /usr/bin /usr/local/bin /usr/pkg/bin `pwd` NONE; do
         if test "$cpuflagsbin" = "NONE"; then
-                AC_MSG_RESULT(unknown)
+            AC_MSG_RESULT(unknown)
         elif test -x $cpuflagsbin/cpuflags; then
-		CPUFLAGS=`$cpuflagsbin/cpuflags`
-                AC_MSG_RESULT($CPUFLAGS)
-		CFLAGS="$CFLAGS $CPUFLAGS"
-                break
+	    CPUFLAGS=`$cpuflagsbin/cpuflags`
+            AC_MSG_RESULT($CPUFLAGS)
+	    CFLAGS="$CPUFLAGS $CFLAGS"
+            break
         fi
-done
+    done
+fi
 
 AC_ARG_ENABLE(newbinkp,  [  --enable-newbinkp       Compile New Binkp code],     [ newbinkp=$enableval ], [ newbinkp=no ])
 if test "$newbinkp" = "yes"; then
@@ -237,7 +236,6 @@ AC_TYPE_SIZE_T
 AC_STRUCT_ST_BLKSIZE
 AC_HEADER_STAT
 AC_STRUCT_TM
-AC_CHECK_MEMBERS([struct utmp.ut_id],,,[#include <utmp.h>])
 
 dnl
 dnl Checks for library functions.
